packages/css/src/resets/_typography.css
/**
 * Improved default styles for typographic elements.
 *
 * @see https://nirvarnia.com/docs/v1/reset
 *
 * @copyright Kieran Potts et al.
 * @license   MIT
 */

/* --- FONT FAMILIES AND WEIGHTS -------------------------------------------- */

/* Apply the default typeface globally, ensuring it's inherited by everything in
the document — including <textarea> and <legend> elements which traditionally do
not inherit their font. */

body {
  font-family: var(--font-family\=default);
  font-weight: var(--font-weight\=normal);

  & * {
    font-family: inherit;
    font-weight: inherit;
  }
}

/* Set the elements that are to be rendered bold by default. */

b, strong {
  font-weight: var(--font-weight\=bold);
}

/* The monospace font is used for preformatted text and program code, etc. */

:--monospace-elements {
  font-family: var(--font-family\=monospace);
  font-weight: var(--font-weight\=normal);

  & b,
  & strong {
    font-weight: var(--font-weight\=bold);
  }
}

/* Remove italics from <var>, for consistency with <code>, <kbd> and <samp>. */

var {
  font-style: normal;
}

/* Set the elements that are to be italicized by default. */

em, i {
  font-style: italic;
}

/* --- FONT SIZES ----------------------------------------------------------- */

/* Set the root's font size. Inheritance needs to be reinforced for nested lists
etc. */

html {
  font-size: var(--font-size\=root);

  & * {
    font-size: 100%;
  }
}

ul ul,
ol ol,
ul ol,
ol ul {
  font-size: 100%;
}

/* Adjust the root font size at the global breakpoints. This is how we implement
responsive typography and other rendering as a global strategy. */

@media (--breakpoint\@xs) {
  html { font-size: var(--font-size\=root\@xs) }
}

@media (--breakpoint\@sm) {
  html { font-size: var(--font-size\=root\@sm) }
}

@media (--breakpoint\@md) {
  html { font-size: var(--font-size\=root\@md) }
}

@media (--breakpoint\@lg) {
  html { font-size: var(--font-size\=root\@lg) }
}

@media (--breakpoint\@xl) {
  html { font-size: var(--font-size\=root\@xl) }
}

@media (--breakpoint\@xxl) {
  html { font-size: var(--font-size\=root\@xxl) }
}

/* Set the default font size on the <body> element, which should be in rem or em
units to make it relative to the root <html> element. */

body {
  font-size: var(--font-size\=default);
}

/* Where font sizes of block-level elements differ from the default font size as
set on the document body, the font-size value should be set relative to the root
element (ie defined in root em units). */

:--monospace-block-elements {
  display: block;
  font-size: var(--font-size\=monospace\|block);
}

/* Inline elements should be sized as a percentage of the font-size they inherit
from their parent block element. Generally this is needed only when the typeface
changes within a block. */

:--monospace-inline-elements {
  display: inline-block;
  font-size: var(--font-size\=monospace\|inline);
}

/* --- LINE HEIGHT ---------------------------------------------------------- */

/* By default, have line heights precisely match the font size of the block. */

body {
  line-height: var(--line-height\=default);

  & * {
    line-height: inherit;
  }
}

:--monospace-block-elements {
  line-height: var(--line-height\=monospace);
}

/* --- OTHER TEXT ADJUSTMENTS ----------------------------------------------- */

/* The text-rendering property is not part of any CSS specification — it is from
the SVG spec in fact — but it is supported by Gecko + WebKit browsers when added
to HTML documents. Web browsers must make trade-offs between speed of rendering,
legibility, and achieving geometric precision in typography.  The text-rendering
property is intended to give UI designers control over these trade-offs. */

html {
  text-rendering: optimizeLegibility;
}

/* For responsive layouts that scale down to fit the width of small screens, the
text-size-adjust property should be set to 100%.  This tells some mobiles to not
inflate the size of rendered text in an attempt to make it more readable.  It is
not a standard CSS property. */

html {
  text-size-adjust: 100%;
}

/* --- FONT COLORS ---------------------------------------------------------- */

/* The default font color is applied to the document body and allowed to cascade
to all elements within the document — even <legend> and form controls that don't
normally inherit the color property. The color property is also inherited as the
default fill color for embedded SVGs (customizable via the fill attribute). */

body {
  color: var(--color\=text\|default);

  & * {
    color: inherit;
  }
}

svg {
  fill: currentColor;
}

/* --- LISTS ---------------------------------------------------------------- */

/* Bullets are removed from unordered lists — but not ordered ones because doing
so would make the "type" attribute obsolete. It is handy for controlling in HTML
the numbering format: <ol type="A">. The default position of bullets is moved to
the inside, which generally works better. */

ol,
ul {
  list-style-position: inside;
}

ul {
  list-style-type: none;
}

li {
  list-style: inherit;
}

/* --- OTHER TEXT ELEMENTS -------------------------------------------------- */

/* Different web browsers design the horizontal rule (<hr>) element in different
ways. Here's a more consistent implementation. */

hr {
  border: 0;
  border-top: 1px solid var(--color\=hr);
  height: 0;
}

/* Text should not be wrapped within figures or preformatted blocks.  Horizontal
scrolling is preferred in this context, even on smaller screens, so the intended
presentation of the text is preserved. */

figure {
  overflow: auto;
}

/* Suppress text wrapping within <code> elements, unless it is in a preformatted
text block. */

code {
  white-space: nowrap;
}

pre {
  overflow: auto;
  white-space: pre;
  word-wrap: normal;

  & code {
    white-space: pre;
  }
}

/* Remove the dotted underline given to <abbr> and <dfn> elements. The values of
their title attributes are inaccessible via touch interfaces, so this visual cue
serves no purpose in that context. Remove the default italics seen on <dfn>s for
the same reason. The only useful differential styling here is the cursor. */

abbr,
dfn {
  text-decoration: none;

  &[title] {
    cursor: help;
  }
}

/* Generated quotes are removed from block-level and inline quotes. */

dfn {
  font-style: normal;
}

blockquote,
q {
  quotes: none;

  &::before,
  &::after {
    content: '';
  }
}

/* Remove the default italics of <cite>, remove the underline from <ins> and <u>
and remove the strikethrough from <del> and <s>. Also reset the <mark> element —
so it is not distinguishable from the surrounding text by default. The items are
thus purely semantic with their design determined exclusively by classes. */

cite {
  font-style: normal;
}

del,
ins {
  text-decoration: none;
}

s,
u {
  text-decoration: none;
}

mark {
  background: transparent;
  color: inherit;
}

/* The default presentation for superscript and subscript affects line-height in
all browsers. We'll use a different method to achieve a similar design, one that
does not affect line-height. */

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

/* Removing the size of the <small> element makes it a pure semantic element, as
it ought to be. The <address> element also has been redefined as a section node,
yet most browsers still treat it as a text node, italicizing its inner text - we
can fix that. */

small {
  font-size: var(--font-size\=small);
}

address {
  font-style: normal;
}

/* Generally it's more convenient if pseudo elements inherit the text-decoration
and vertical-align properties of their parents. */

::before,
::after {
  text-decoration: inherit;
  vertical-align: inherit;
}

/* Here's a better default presentation for selected text. */

::selection {
  background: var(--color\=text\|selection);
  color: inherit;
  text-shadow: none;
}

